third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_field_field.exp

Diagnostics:
error: cannot copy mutable reference in local `inner` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_field.move:32:18
   │
31 │         let c = &inner.f1;
   │                 --------- previous field borrow
32 │         let f1 = &inner.f1;
   │                  ^^^^^^^^^ copied here

error: cannot copy mutable reference in local `inner` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_field.move:34:9
   │
31 │         let c = &inner.f1;
   │                 --------- previous field borrow
32 │         let f1 = &inner.f1;
   │                  --------- previous field borrow
33 │         *c;
34 │         *inner;
   │         ^^^^^^ copied here

error: cannot copy mutable reference in local `inner` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_field.move:41:18
   │
40 │         let c = id(&inner.f1);
   │                 -------------
   │                 │  │
   │                 │  previous field borrow
   │                 used by call result
41 │         let f1 = &inner.f1;
   │                  ^^^^^^^^^ copied here

error: cannot copy mutable reference in local `inner` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_field.move:43:9
   │
40 │         let c = id(&inner.f1);
   │                 -------------
   │                 │  │
   │                 │  previous field borrow
   │                 used by call result
41 │         let f1 = &inner.f1;
   │                  --------- previous field borrow
42 │         *c;
43 │         *inner;
   │         ^^^^^^ copied here

error: cannot copy mutable reference in local `inner` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_field.move:50:18
   │
49 │         let c = &mut inner.f1;
   │                 ------------- previous mutable field borrow
50 │         let f1 = &mut inner.f1; // error in v2
   │                  ^^^^^^^^^^^^^ copied here

error: conflicting borrow operations
   ┌─ tests/reference-safety/v1-tests/borrow_field_field.move:51:9
   │
49 │         let c = &mut inner.f1;
   │                 ------------- mutable field borrow attempted here
50 │         let f1 = &mut inner.f1; // error in v2
   │                  ------------- other mutable field borrow
51 │         *c;
   │         ^^ reference used here

error: cannot copy mutable reference in local `inner` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_field.move:57:18
   │
56 │         let c = id_mut(&mut inner.f1);
   │                 ---------------------
   │                 │      │
   │                 │      previous mutable field borrow
   │                 used by mutable call result
57 │         let f1 = &mut inner.f1;
   │                  ^^^^^^^^^^^^^ copied here
